# lakehouse-paradigm-comparison

./: .gitignore  BENCHMARK_REPORT.md  README.md  ROADMAP.md  docker-compose.yaml
.github/workflows/: python-app-ci.yml  (+1 more)
contracts/: order_contract.yaml
ingestion/: .env  .env.example  Dockerfile  pyproject.toml
ingestion/source/: main.py
ingestion/source/config/: settings.py
ingestion/source/controller/: consumer_to_gcs.py  ingestion_ctl.py  producer.py
ingestion/source/core/: base_service.py  constants.py  exceptions.py
ingestion/source/mapper/configs/: ecommerce_map.json  topic_map.py
ingestion/source/mapper/handler/: csv_reader.py  topic_router.py  transform_map.py
ingestion/source/models/: __init__.py  event_envelope.py  schema_model.py
ingestion/source/services/: audit_svc.py  infisical_manager.py  kafka_consumer_svc.py  kafka_producer_svc.py  kafka_svc.py  storage_svc.py
ingestion/source/utils/: helper.py  logger.py
ingestion/tests/integration/: test_integration.py
ingestion/tests/unit/: test_service.py
monitoring/: alert_rules.yml  prometheus.yml
scratch/: upload_db_secret.py
transformation/dbt_project/: .user.yml  benchmark.py  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles.yml.example  pyproject.toml  run_dbt_infisical.py
transformation/dbt_project/edr_target/: elementary_report.html
transformation/dbt_project/macros/: cents_to_dollars.sql  col.sql  create_external_tables.sql  log_dbt_run_results.sql  mask_pii.sql
transformation/dbt_project/models/marts/: dim_customers.sql  dim_products.sql  dim_users.sql  fct_order_items.sql  fct_orders.sql  mart_category_performance.sql  mart_seller_performance.sql  schema.yml
transformation/dbt_project/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_ecommerce.sql  stg_geolocation.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_product_categories.sql  stg_products.sql  stg_reviews.sql  stg_sellers.sql
transformation/dbt_project/tests/: assert_positive_value.sql
(+27 files in other folders)
